<resources>
    <string name="app_name">Finanzas</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Regístrate</string>
    <string-array name="lien_types">
        <item>Individual</item>
        <item>Mancomunado</item>
        <item>Endosado</item>
        <item>Individual con retorno</item>
        <item>Mancomunado con retorno</item>
    </string-array>

    <string name="not_fill">Todos los parametros no están llenos</string>
    <string name="van">VAN: $1</string>
    <string name="tir">TIR: $1</string>

    <string-array name="plan_headers">
        <item>Mes</item>
        <item>Saldo inicial</item>
        <item>Interés</item>
        <item>Seguro de desgramen</item>
        <item>Seguro bien</item>
        <item>Cuota</item>
        <item>Amortización</item>
        <item>Saldo final</item>
    </string-array>

    <string name="modality">Modalidad: %s</string>
    <string name="rate">Tasa de interés: %s %.2f</string>
    <string name="property_cost">Costo de inmueble: %.2f</string>
    <string name="loan">Préstamo: %.2f</string>
    <string name="initial_fee">Cuota inicial: %.2f</string>
    <string name="terms">Plazo (años): %d</string>
    <string name="grace_period">Periodo de gracia: %s</string>
    <string name="sustainable_bonus">Bono mi vivienda sostenible: %.2f</string>
    <string name="good_payer_bonus">Bono buen pagador: %.2f</string>
    <string name="grace_moths">Meses de gracia: %d</string>
    <string name="rate_effective">Tasa efectiva anual: %.2f</string>
    <string name="save">Guardar</string>
    <string name="delete">Borrar</string>
    <string name="cancel">Cancelar</string>
    <string name="save_plan">¿Seguro que quieres guardar este plan de pagos para %s?</string>
    <string name="delete_plan">¿Seguro que quieres eliminar este plan de pagos para %s?</string>
    <string name="coin">Moneda: %s</string>
</resources>